// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extractArgTypes (vue-docgen-api) > should extract events for Vue component 1`] = `
{
  "bar": {
    "control": {
      "disabled": true,
    },
    "description": "",
    "name": "bar",
    "table": {
      "category": "events",
      "type": {
        "summary": "[value: { year: number; title?: any; }]",
      },
    },
    "type": {
      "name": "other",
      "value": "[value: { year: number; title?: any; }]",
    },
  },
  "baz": {
    "control": {
      "disabled": true,
    },
    "description": "",
    "name": "baz",
    "table": {
      "category": "events",
      "type": {
        "summary": "[]",
      },
    },
    "type": {
      "name": "other",
      "value": "[]",
    },
  },
  "foo": {
    "control": {
      "disabled": true,
    },
    "description": "",
    "name": "foo",
    "table": {
      "category": "events",
      "type": {
        "summary": "[data?: { foo: string; }]",
      },
    },
    "type": {
      "name": "other",
      "value": "[data?: { foo: string; } | undefined]",
    },
  },
}
`;

exports[`extractArgTypes (vue-docgen-api) > should extract events for component 1`] = `
{
  "bar": {
    "control": {
      "disabled": true,
    },
    "description": "Test description bar",
    "name": "bar",
    "table": {
      "category": "events",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": {
        "summary": "{ year: number; title?: any }",
      },
    },
    "type": {
      "name": "other",
      "required": false,
      "value": "{ year: number; title?: any }",
    },
  },
  "baz": {
    "control": {
      "disabled": true,
    },
    "description": "Test description baz",
    "name": "baz",
    "table": {
      "category": "events",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": undefined,
    },
    "type": {
      "name": "other",
      "required": false,
      "value": "",
    },
  },
}
`;

exports[`extractArgTypes (vue-docgen-api) > should extract expose for component 1`] = `
{
  "count": {
    "control": {
      "disabled": true,
    },
    "description": "a count number",
    "name": "count",
    "table": {
      "category": "expose",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": undefined,
    },
    "type": {
      "name": "other",
      "value": "",
    },
  },
  "label": {
    "control": {
      "disabled": true,
    },
    "description": "a label string",
    "name": "label",
    "table": {
      "category": "expose",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": undefined,
    },
    "type": {
      "name": "other",
      "value": "",
    },
  },
}
`;

exports[`extractArgTypes (vue-docgen-api) > should extract props for component 1`] = `
{
  "array": {
    "control": {
      "disabled": false,
    },
    "defaultValue": undefined,
    "description": "description required array object",
    "name": "array",
    "table": {
      "category": "props",
      "defaultValue": undefined,
      "type": {
        "summary": "MyNestedProps[]",
      },
    },
    "type": {
      "name": "array",
      "required": true,
      "value": {
        "name": "object",
        "required": false,
        "value": {
          "nestedProp": {
            "name": "string",
            "required": true,
          },
        },
      },
    },
  },
  "arrayOptional": {
    "control": {
      "disabled": false,
    },
    "defaultValue": undefined,
    "description": "description optional array object",
    "name": "arrayOptional",
    "table": {
      "category": "props",
      "defaultValue": undefined,
      "type": {
        "summary": "MyNestedProps[]",
      },
    },
    "type": {
      "name": "array",
      "required": false,
      "value": {
        "name": "object",
        "required": false,
        "value": {
          "nestedProp": {
            "name": "string",
            "required": true,
          },
        },
      },
    },
  },
  "bar": {
    "control": {
      "disabled": false,
    },
    "defaultValue": {
      "summary": "1",
    },
    "description": "description bar is optional number",
    "name": "bar",
    "table": {
      "category": "props",
      "defaultValue": {
        "summary": "1",
      },
      "type": {
        "summary": "number",
      },
    },
    "type": {
      "name": "number",
      "required": false,
    },
  },
  "baz": {
    "control": {
      "disabled": false,
    },
    "defaultValue": undefined,
    "description": "description baz is required boolean",
    "name": "baz",
    "table": {
      "category": "props",
      "defaultValue": undefined,
      "type": {
        "summary": "boolean",
      },
    },
    "type": {
      "name": "boolean",
      "required": true,
    },
  },
  "enumValue": {
    "control": {
      "disabled": false,
    },
    "defaultValue": undefined,
    "description": "description enum value",
    "name": "enumValue",
    "table": {
      "category": "props",
      "defaultValue": undefined,
      "type": {
        "summary": "MyEnum",
      },
    },
    "type": {
      "name": "enum",
      "required": true,
      "value": [
        "MyEnum.Small",
        "MyEnum.Medium",
        "MyEnum.Large",
      ],
    },
  },
  "foo": {
    "control": {
      "disabled": false,
    },
    "defaultValue": undefined,
    "description": "@default: "rounded"<br>@since: v1.0.0<br>@see: https://vuejs.org/<br>@deprecated: v1.1.0<br><br>string foo",
    "name": "foo",
    "table": {
      "category": "props",
      "defaultValue": undefined,
      "type": {
        "summary": "string",
      },
    },
    "type": {
      "name": "string",
      "required": true,
    },
  },
  "inlined": {
    "control": {
      "disabled": false,
    },
    "defaultValue": undefined,
    "description": "",
    "name": "inlined",
    "table": {
      "category": "props",
      "defaultValue": undefined,
      "type": {
        "summary": "{ foo: string; }",
      },
    },
    "type": {
      "name": "object",
      "required": true,
      "value": {
        "foo": {
          "name": "string",
          "required": true,
        },
      },
    },
  },
  "literalFromContext": {
    "control": {
      "disabled": false,
    },
    "defaultValue": undefined,
    "description": "description literal type alias that require context",
    "name": "literalFromContext",
    "table": {
      "category": "props",
      "defaultValue": undefined,
      "type": {
        "summary": ""Uncategorized" | "Content" | "Interaction" | "Display" | "Forms" | "Addons"",
      },
    },
    "type": {
      "name": "enum",
      "required": true,
      "value": [
        "Uncategorized",
        "Content",
        "Interaction",
        "Display",
        "Forms",
        "Addons",
      ],
    },
  },
  "nested": {
    "control": {
      "disabled": false,
    },
    "defaultValue": undefined,
    "description": "description nested is required nested object",
    "name": "nested",
    "table": {
      "category": "props",
      "defaultValue": undefined,
      "type": {
        "summary": "MyNestedProps",
      },
    },
    "type": {
      "name": "object",
      "required": true,
      "value": {
        "nestedProp": {
          "name": "string",
          "required": true,
        },
      },
    },
  },
  "nestedIntersection": {
    "control": {
      "disabled": false,
    },
    "defaultValue": undefined,
    "description": "description required nested object with intersection",
    "name": "nestedIntersection",
    "table": {
      "category": "props",
      "defaultValue": undefined,
      "type": {
        "summary": "MyNestedProps & { additionalProp: string; }",
      },
    },
    "type": {
      "name": "object",
      "required": true,
      "value": {
        "additionalProp": {
          "name": "string",
          "required": true,
        },
        "nestedProp": {
          "name": "string",
          "required": true,
        },
      },
    },
  },
  "nestedOptional": {
    "control": {
      "disabled": false,
    },
    "defaultValue": undefined,
    "description": "description optional nested object",
    "name": "nestedOptional",
    "table": {
      "category": "props",
      "defaultValue": undefined,
      "type": {
        "summary": "MyNestedProps | MyIgnoredNestedProps",
      },
    },
    "type": {
      "name": "union",
      "required": false,
      "value": [
        {
          "name": "object",
          "required": false,
          "value": {
            "nestedProp": {
              "name": "string",
              "required": true,
            },
          },
        },
        {
          "name": "object",
          "required": false,
          "value": {
            "nestedProp": {
              "name": "string",
              "required": true,
            },
          },
        },
      ],
    },
  },
  "recursive": {
    "control": {
      "disabled": false,
    },
    "defaultValue": undefined,
    "description": "",
    "name": "recursive",
    "table": {
      "category": "props",
      "defaultValue": undefined,
      "type": {
        "summary": "MyNestedRecursiveProps",
      },
    },
    "type": {
      "name": "object",
      "required": false,
      "value": {
        "recursive": {
          "name": "other",
          "required": true,
          "value": "MyNestedRecursiveProps",
        },
      },
    },
  },
  "stringArray": {
    "control": {
      "disabled": false,
    },
    "defaultValue": {
      "summary": "["foo", "bar"]",
    },
    "description": "description stringArray is string array",
    "name": "stringArray",
    "table": {
      "category": "props",
      "defaultValue": {
        "summary": "["foo", "bar"]",
      },
      "type": {
        "summary": "string[]",
      },
    },
    "type": {
      "name": "array",
      "required": false,
      "value": {
        "name": "string",
        "required": false,
      },
    },
  },
  "union": {
    "control": {
      "disabled": false,
    },
    "defaultValue": undefined,
    "description": "description union is required union type",
    "name": "union",
    "table": {
      "category": "props",
      "defaultValue": undefined,
      "type": {
        "summary": "string | number",
      },
    },
    "type": {
      "name": "union",
      "required": true,
      "value": [
        {
          "name": "string",
          "required": false,
        },
        {
          "name": "number",
          "required": false,
        },
      ],
    },
  },
  "unionOptional": {
    "control": {
      "disabled": false,
    },
    "defaultValue": undefined,
    "description": "description unionOptional is optional union type",
    "name": "unionOptional",
    "table": {
      "category": "props",
      "defaultValue": undefined,
      "type": {
        "summary": "string | number | boolean",
      },
    },
    "type": {
      "name": "union",
      "required": false,
      "value": [
        {
          "name": "string",
          "required": false,
        },
        {
          "name": "number",
          "required": false,
        },
        {
          "name": "boolean",
          "required": false,
        },
      ],
    },
  },
}
`;

exports[`extractArgTypes (vue-docgen-api) > should extract props for component 2`] = `
{
  "array": {
    "control": {
      "disabled": false,
    },
    "description": "description required array object",
    "name": "array",
    "table": {
      "category": "props",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": {
        "summary": "MyNestedProps[]",
      },
    },
    "type": {
      "name": "other",
      "required": true,
      "value": "Array([object Object])",
    },
  },
  "arrayOptional": {
    "control": {
      "disabled": false,
    },
    "description": "description optional array object",
    "name": "arrayOptional",
    "table": {
      "category": "props",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": {
        "summary": "MyNestedProps[]",
      },
    },
    "type": {
      "name": "other",
      "required": false,
      "value": "Array([object Object])",
    },
  },
  "bar": {
    "control": {
      "disabled": false,
    },
    "description": "description bar is optional number",
    "name": "bar",
    "table": {
      "category": "props",
      "defaultValue": {
        "summary": "1",
      },
      "jsDocTags": undefined,
      "type": {
        "summary": "number",
      },
    },
    "type": {
      "name": "number",
      "required": false,
    },
  },
  "baz": {
    "control": {
      "disabled": false,
    },
    "description": "description baz is required boolean",
    "name": "baz",
    "table": {
      "category": "props",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": {
        "summary": "boolean",
      },
    },
    "type": {
      "name": "boolean",
      "required": true,
    },
  },
  "enumValue": {
    "control": {
      "disabled": false,
    },
    "description": "description enum value",
    "name": "enumValue",
    "table": {
      "category": "props",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": {
        "summary": "MyEnum",
      },
    },
    "type": {
      "name": "other",
      "required": true,
      "value": "MyEnum",
    },
  },
  "foo": {
    "control": {
      "disabled": false,
    },
    "description": "string foo",
    "name": "foo",
    "table": {
      "category": "props",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": {
        "summary": "string",
      },
    },
    "type": {
      "name": "string",
      "required": true,
    },
  },
  "inlined": {
    "control": {
      "disabled": false,
    },
    "description": undefined,
    "name": "inlined",
    "table": {
      "category": "props",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": {
        "summary": "{ foo: string }",
      },
    },
    "type": {
      "name": "other",
      "required": true,
      "value": "{ foo: string }",
    },
  },
  "literalFromContext": {
    "control": {
      "disabled": false,
    },
    "description": "description literal type alias that require context",
    "name": "literalFromContext",
    "table": {
      "category": "props",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": {
        "summary": "MyCategories",
      },
    },
    "type": {
      "name": "other",
      "required": true,
      "value": "MyCategories",
    },
  },
  "nested": {
    "control": {
      "disabled": false,
    },
    "description": "description nested is required nested object",
    "name": "nested",
    "table": {
      "category": "props",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": {
        "summary": "MyNestedProps",
      },
    },
    "type": {
      "name": "other",
      "required": true,
      "value": "MyNestedProps",
    },
  },
  "nestedIntersection": {
    "control": {
      "disabled": false,
    },
    "description": "description required nested object with intersection",
    "name": "nestedIntersection",
    "table": {
      "category": "props",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": {
        "summary": "MyNestedProps & {
  /**
   * description required additional property
   */
  additionalProp: string;
}",
      },
    },
    "type": {
      "name": "other",
      "required": true,
      "value": "intersection([object Object],[object Object])",
    },
  },
  "nestedOptional": {
    "control": {
      "disabled": false,
    },
    "description": "description optional nested object",
    "name": "nestedOptional",
    "table": {
      "category": "props",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": {
        "summary": "MyNestedProps | MyIgnoredNestedProps",
      },
    },
    "type": {
      "name": "union",
      "required": false,
      "value": [
        {
          "name": "other",
          "value": "MyNestedProps",
        },
        {
          "name": "other",
          "value": "MyIgnoredNestedProps",
        },
      ],
    },
  },
  "recursive": {
    "control": {
      "disabled": false,
    },
    "description": undefined,
    "name": "recursive",
    "table": {
      "category": "props",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": {
        "summary": "MyNestedRecursiveProps",
      },
    },
    "type": {
      "name": "other",
      "required": false,
      "value": "MyNestedRecursiveProps",
    },
  },
  "stringArray": {
    "control": {
      "disabled": false,
    },
    "description": "description stringArray is string array",
    "name": "stringArray",
    "table": {
      "category": "props",
      "defaultValue": {
        "summary": "() => ['foo', 'bar']",
      },
      "jsDocTags": undefined,
      "type": {
        "summary": "string[]",
      },
    },
    "type": {
      "name": "other",
      "required": false,
      "value": "Array([object Object])",
    },
  },
  "union": {
    "control": {
      "disabled": false,
    },
    "description": "description union is required union type",
    "name": "union",
    "table": {
      "category": "props",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": {
        "summary": "string | number",
      },
    },
    "type": {
      "name": "union",
      "required": true,
      "value": [
        {
          "name": "string",
        },
        {
          "name": "number",
        },
      ],
    },
  },
  "unionOptional": {
    "control": {
      "disabled": false,
    },
    "description": "description unionOptional is optional union type",
    "name": "unionOptional",
    "table": {
      "category": "props",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": {
        "summary": "string | number | boolean",
      },
    },
    "type": {
      "name": "union",
      "required": false,
      "value": [
        {
          "name": "string",
        },
        {
          "name": "number",
        },
        {
          "name": "boolean",
        },
      ],
    },
  },
}
`;

exports[`extractArgTypes (vue-docgen-api) > should extract slots for component 1`] = `
{
  "default": {
    "control": {
      "disabled": false,
    },
    "description": undefined,
    "name": "default",
    "table": {
      "category": "slots",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": {
        "summary": "{ num: unknown }",
      },
    },
    "type": {
      "name": "other",
      "required": false,
      "value": "{ num: unknown }",
    },
  },
  "named": {
    "control": {
      "disabled": false,
    },
    "description": undefined,
    "name": "named",
    "table": {
      "category": "slots",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": {
        "summary": "{ str: unknown }",
      },
    },
    "type": {
      "name": "other",
      "required": false,
      "value": "{ str: unknown }",
    },
  },
  "no-bind": {
    "control": {
      "disabled": false,
    },
    "description": undefined,
    "name": "no-bind",
    "table": {
      "category": "slots",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": undefined,
    },
    "type": {
      "name": "other",
      "required": false,
      "value": "",
    },
  },
  "vbind": {
    "control": {
      "disabled": false,
    },
    "description": undefined,
    "name": "vbind",
    "table": {
      "category": "slots",
      "defaultValue": null,
      "jsDocTags": undefined,
      "type": {
        "summary": "{ num: unknown; str: unknown }",
      },
    },
    "type": {
      "name": "other",
      "required": false,
      "value": "{ num: unknown; str: unknown }",
    },
  },
}
`;

exports[`extractArgTypes (vue-docgen-api) > should extract slots type for Vue component 1`] = `
{
  "default": {
    "control": {
      "disabled": false,
    },
    "description": "",
    "name": "default",
    "table": {
      "category": "slots",
      "type": {
        "summary": "{ num: number; }",
      },
    },
    "type": {
      "name": "other",
      "value": "{ num: number; }",
    },
  },
  "named": {
    "control": {
      "disabled": false,
    },
    "description": "",
    "name": "named",
    "table": {
      "category": "slots",
      "type": {
        "summary": "{ str: string; }",
      },
    },
    "type": {
      "name": "other",
      "value": "{ str: string; }",
    },
  },
  "no-bind": {
    "control": {
      "disabled": false,
    },
    "description": "",
    "name": "no-bind",
    "table": {
      "category": "slots",
      "type": {
        "summary": "{}",
      },
    },
    "type": {
      "name": "other",
      "value": "{}",
    },
  },
  "vbind": {
    "control": {
      "disabled": false,
    },
    "description": "",
    "name": "vbind",
    "table": {
      "category": "slots",
      "type": {
        "summary": "{ num: number; str: string; }",
      },
    },
    "type": {
      "name": "other",
      "value": "{ num: number; str: string; }",
    },
  },
}
`;
